Add clangd configuration and UTF-8 conversion tools
Add automated clangd setup for enhanced C/C++ language support in Zed,
including compile_commands.json generation and .clangd configuration.
Add UTF-8 conversion tool for C/H files and automatic .gitignore
generation. Update documentation with new features and troubleshooting
guides.

--- a/使用说明.md
+++ b/使用说明.md
@@ -43,11 +43,54 @@
 *   `.zed/tasks.json`: Zed 任务的定义文件。它告诉 Zed 命令面板中有哪些任务，以及每个任务应该执行什么命令。
 *   `.zed/keil_task.bat`: 核心功能脚本。它会自动查找项目中的 `.uvprojx` 或 `.uvproj` 文件，并根据任务传来的参数（`build`, `flash` 等）调用 Keil 执行相应操作，同时捕获并显示 Keil 的原生输出。
 *   `.zed/keilkilll.bat`: 一个简单的清理脚本，用于删除 Keil 编译产生的各种中间文件。
+*   `.zed/keil_utf8conv.bat`: UTF-8编码转换工具。用于将项目中的 `.c` 和 `.h` 文件批量转换为 UTF-8 编码。
+
+### 编码转换注意事项
+- `.zed/keil_utf8conv.bat` 工具会将所有 `.c` 和 `.h` 文件转换为 UTF-8 编码
+- **可能出现乱码风险**：如果原始文件不是 ANSI 编码或已损坏，转换后可能出现乱码
+- **建议转换前备份**：在执行转换操作前，建议先备份原始文件，或使用版本控制工具管理
+- **解决方案**：如果出现乱码，可以将备份的原始文件替换回来，或使用文本编辑器手动调整编码
 
 ---
 
 ## 常见问题解答
 
+### 关于任务执行失败
 **问：任务执行失败，输出 `[ERROR] Keil 程序未在 "..." 找到`？**
 
 **答：** 这是最常见的问题。请回到 **[步骤 1](#步骤-1-一次性配置-keil-路径)**，仔细检查并确保你在 `keil_task.bat` 文件中设置的 `KEIL_PATH` 路径是完全正确的。
+
+---
+
+### 关于clangd配置报错
+**问：使用clangd时出现很多错误和警告？**
+
+**答：** 这通常是因为clangd缺少正确的编译信息。你可以采取以下措施：
+
+1. **确保生成了正确的 `.clangd` 配置**：
+   - 运行 `Keil: clangd 自动配置` 任务来生成初始配置
+   - 该任务会创建 `.clangd` 和 `compile_commands.json` 文件
+
+2. **更新 `compile_commands.json`**：
+   - 自动生成的 `compile_commands.json` 是一个模板，缺少实际项目信息
+   - 对于 Keil MDK 5.30+ 用户，可以在 Keil 中启用 "Generate compiler command line file" 功能
+   - 或者手动编辑该文件，添加项目实际的编译命令和包含路径
+
+3. **配置中忽略的警告**：
+   - 默认配置已经忽略了一些与 Keil 编译器兼容的常见警告
+   - 如果还有其他警告，可以编辑 `.clangd` 文件添加更多的忽略规则
+
+4. **示例：添加更多包含路径**：
+   ```yaml
+   CompileFlags:
+     Add: -I".", -I"./inc", -I"./include", -I"D:\Keil\ARM\CMSIS\Include"
+   ```
+
+---
+
+### 关于UTF-8编码转换
+**问：使用编码转换工具后出现乱码？**
+
+**答：** 请参考前面的 **[编码转换注意事项](#编码转换注意事项)**。如果出现乱码，建议：
+- 立即将备份的原始文件替换回来
+- 或使用支持多种编码的文本编辑器手动调整文件编码
