--- a/使用说明.md
+++ b/使用说明.md
@@ -4,7 +4,7 @@
 
 本工具集旨在将 Keil C51/MDK-ARM 的编译、烧录和清理功能无缝集成到 Zed 编辑器中，让你无需离开 Zed 即可完成嵌入式项目的主要操作。
 
-它通过 Zed 的“任务(Tasks)”功能调用批处理脚本，实现了项目文件的自动查找和命令的自动执行。
+它通过 Zed 的"任务(Tasks)"功能调用批处理脚本，实现了项目文件的自动查找和命令的自动执行。
 
 ---
 
@@ -35,6 +35,58 @@
     *   `Keil: 重新编译 (自动查找)`: 完全重新编译你的项目。
     *   `Keil: 烧录 (自动查找)`: 编译并烧录程序到目标硬件。
     *   `Keil: 清理 (Clean)`: 清理编译过程中产生的临时文件。
+    *   `Keil: clangd 配置与 compile_commands 生成`: 生成 C/C++ 语言服务器配置。
+    *   `Keil: 生成 .gitignore 文件`: 自动生成项目所需的 Git 忽略规则。
+    *   `Keil: 转换所有 C/H 文件为 UTF-8`: 批量转换源文件编码。
+
+---
+
+## 功能详解
+
+### 基础编译功能
+
+#### 自动项目查找
+脚本会自动在当前目录及其所有子目录中查找 Keil 项目文件（`.uvprojx` 或 `.uvproj`），无需手动指定项目文件路径。
+
+#### 编译输出管理
+所有编译输出（包括错误和警告）会实时显示在 Zed 的终端中，同时也会保存为 `keil_build_log.txt` 文件，便于后续查看。
+
+#### 编译模式说明
+- **增量编译** (`build`): 只重新编译修改过的文件，速度最快
+- **完全重新编译** (`rebuild`): 清理后重新构建所有文件，确保无缓存影响
+- **烧录** (`flash`): 编译完成后直接烧录到目标硬件
+
+### 开发辅助功能
+
+#### clangd 配置
+运行 `Keil: clangd 配置与 compile_commands 生成` 任务会：
+1. 创建或更新 `.clangd` 配置文件，包含针对嵌入式开发的优化设置
+2. 尝试使用 `keil2clangd.exe` 工具生成真实的 `compile_commands.json`
+3. 如果工具失败，则生成一个基本的模板文件供手动编辑
+
+**clangd 配置文件主要内容包括：**
+- 编译标志设置（包含路径、预定义宏等）
+- 诊断选项（忽略特定警告）
+- 索引和补全配置
+
+#### .gitignore 生成
+运行 `Keil: 生成 .gitignore 文件` 任务会：
+1. 检查是否已存在 `.gitignore` 文件，如果存在则追加新规则
+2. 添加常见的 Keil 临时文件和中间文件忽略规则
+3. 添加各种开发工具（VSCode、JetBrains 等）的配置文件忽略规则
+4. 添加 AI 辅助开发工具相关文件的忽略规则
+
+**包含的忽略规则类型：**
+- Keil 生成的文件：`.obj`, `.lst`, `.axf`, `.map`, `.crf` 等
+- IDE 配置文件：`.vscode`, `.idea` 等
+- 临时和缓存文件：`*.tmp`, `*.bak` 等
+- AI 工具文件：`.claude`, `agents/` 等
+
+#### 编码转换
+运行 `Keil: 转换所有 C/H 文件为 UTF-8` 任务会：
+1. 递归查找当前目录下的所有 `.c` 和 `.h` 文件
+2. 使用 PowerShell 将这些文件转换为 UTF-8 编码
+3. 注意：如果原始文件编码不是 ANSI，可能会出现乱码
 
 ---
 
@@ -43,13 +95,9 @@
 *   `.zed/tasks.json`: Zed 任务的定义文件。它告诉 Zed 命令面板中有哪些任务，以及每个任务应该执行什么命令。
 *   `.zed/keil_task.bat`: 核心功能脚本。它会自动查找项目中的 `.uvprojx` 或 `.uvproj` 文件，并根据任务传来的参数（`build`, `flash` 等）调用 Keil 执行相应操作，同时捕获并显示 Keil 的原生输出。
 *   `.zed/keilkilll.bat`: 一个简单的清理脚本，用于删除 Keil 编译产生的各种中间文件。
-*   `.zed/keil_utf8conv.bat`: UTF-8编码转换工具。用于将项目中的 `.c` 和 `.h` 文件批量转换为 UTF-8 编码。
-
-### 编码转换注意事项
-- `.zed/keil_utf8conv.bat` 工具会将所有 `.c` 和 `.h` 文件转换为 UTF-8 编码
-- **可能出现乱码风险**：如果原始文件不是 ANSI 编码或已损坏，转换后可能出现乱码
-- **建议转换前备份**：在执行转换操作前，建议先备份原始文件，或使用版本控制工具管理
-- **解决方案**：如果出现乱码，可以将备份的原始文件替换回来，或使用文本编辑器手动调整编码
+*   `.zed/clangd_config.bat`: clangd 配置脚本，自动生成 `.clangd` 和 `compile_commands.json` 文件。
+*   `.zed/gitignore_config.bat`: .gitignore 生成脚本，创建适合 Keil 项目的 Git 忽略规则。
+*   `.zed/keil_utf8conv.bat`: 编码转换脚本，将项目中的源文件转换为 UTF-8 编码。
 
 ---
 
@@ -60,37 +108,333 @@
 
 **答：** 这是最常见的问题。请回到 **[步骤 1](#步骤-1-一次性配置-keil-路径)**，仔细检查并确保你在 `keil_task.bat` 文件中设置的 `KEIL_PATH` 路径是完全正确的。
 
+**问：显示"[ERROR] 未找到 *.uvprojx 或 *.uvproj 项目文件。"错误？**
+
+**答：** 请确保当前目录或其子目录中确实存在 Keil 项目文件，文件扩展名应为 `.uvprojx`（Keil MDK 5.x）或 `.uvproj`（Keil MDK 4.x）。
+
+**问：编译成功但烧录失败？**
+
+**答：** 这通常与硬件连接或驱动程序有关。检查以下方面：
+1. 确保硬件连接正确
+2. 安装正确的调试器驱动程序
+3. 检查 Keil 项目中的烧录配置
+4. 尝试在 Keil 中直接执行烧录操作以排除硬件问题
+
+**问：编译输出显示异常或乱码？**
+
+**答：** 这可能是因为系统默认代码页设置问题。脚本已设置使用 UTF-8 代码页（65001），但如果仍有问题，可以：
+1. 检查 Windows 控制台编码设置
+2. 尝试在 cmd 中运行 `chcp 65001` 然后再执行命令
+3. 确保 Keil 项目的编码设置正确
+
 ---
 
-### 关于clangd配置报错
-**问：使用clangd时出现很多错误和警告？**
+### 关于 clangd 配置
+**问：使用 clangd 时出现很多错误和警告？**
 
-**答：** 这通常是因为clangd缺少正确的编译信息。你可以采取以下措施：
+**答：** 这通常是因为 clangd 缺少正确的编译信息。你可以采取以下措施：
 
-1. **确保生成了正确的 `.clangd` 配置**：
-   - 运行 `Keil: clangd 自动配置` 任务来生成初始配置
-   - 该任务会创建 `.clangd` 和 `compile_commands.json` 文件
+1. **检查生成的配置文件**：
+   - 确保项目根目录下存在 `.clangd` 和 `compile_commands.json` 文件
+   - 查看 BUILD 目录下是否生成了 `compile_commands.json`（如果使用 keil2clangd.exe）
 
-2. **更新 `compile_commands.json`**：
-   - 自动生成的 `compile_commands.json` 是一个模板，缺少实际项目信息
-   - 对于 Keil MDK 5.30+ 用户，可以在 Keil 中启用 "Generate compiler command line file" 功能
-   - 或者手动编辑该文件，添加项目实际的编译命令和包含路径
-
-3. **配置中忽略的警告**：
-   - 默认配置已经忽略了一些与 Keil 编译器兼容的常见警告
-   - 如果还有其他警告，可以编辑 `.clangd` 文件添加更多的忽略规则
-
-4. **示例：添加更多包含路径**：
-   ```yaml
-   CompileFlags:
-     Add: -I".", -I"./inc", -I"./include", -I"D:\Keil\ARM\CMSIS\Include"
+2. **自定义 compile_commands.json**：
+   ```json
+   {
+     "version": 1,
+     "commands": [
+       {
+         "directory": ".",
+         "command": "armcc -c -o obj/main.o -I. -Iinc -DDEBUG -std=c99 main.c",
+         "file": "main.c"
+       },
+       {
+         "directory": ".",
+         "command": "armasm -g --cpu=Cortex-M3 -o obj/startup.o startup.s",
+         "file": "startup.s"
+       }
+     ]
+   }
    ```
 
+3. **添加忽略规则**：
+   在 `.clangd` 中添加需要忽略的诊断：
+   ```yaml
+   Diagnostics:
+     Suppress: ["unused-includes", "macro-redefined", "return-stack-address"]
+   ```
+
+4. **添加特定于芯片的定义**：
+   ```yaml
+   CompileFlags:
+     Add: -DSTM32F10X_MD, -DUSE_STDPERIPH_DRIVER, -DHSE_VALUE=8000000
+   ```
+
+**问：clangd 代码补全不准确或缺失？**
+
+**答：** 尝试以下优化措施：
+1. 确保 `index.Background` 设置为 `Build` 以启用后台索引
+2. 添加项目中实际使用的所有包含路径
+3. 定义所有必要的前缀宏（特别是芯片型号系列）
+4. 重新加载 Zed 以激活更新的配置
+5. 检查 Zed 的 clangd 扩展是否已启用
+
 ---
 
-### 关于UTF-8编码转换
+### 关于 .gitignore 生成
+**问：如何自定义 .gitignore 内容？**
+
+**答：** 脚本会在现有 `.gitignore` 文件末尾追加内容。你可以：
+1. 手动编辑 `.gitignore` 文件修改不需要的规则
+2. 删除现有文件，重新运行任务以获取新模板
+3. 在 Git 中使用 `.git/info/exclude` 添加个人本地忽略规则
+4. 针对特定工具创建额外的 `.gitignore` 部分
+
+**问：哪些文件应该被忽略但不被包含在默认模板中？**
+
+**答：** 可能需要根据特殊需求添加：
+- IDE 生制的临时文件
+- 特定中间件产生的输出文件
+- 本地配置文件和文档
+- 工具链特有的二进制文件（如特定于板的二进制文件）
+- 本地测试或验证脚本
+
+**问：如何忽略但保留文件？**
+
+**答：** 使用以下策略保留文件但忽略变更：
+```gitignore
+config.h
+!config.h.example
+```
+这样会忽略 `config.h` 但保留 `config.h.example` 作为模板。
+
+---
+
+### 关于 UTF-8 编码转换
 **问：使用编码转换工具后出现乱码？**
 
-**答：** 请参考前面的 **[编码转换注意事项](#编码转换注意事项)**。如果出现乱码，建议：
-- 立即将备份的原始文件替换回来
-- 或使用支持多种编码的文本编辑器手动调整文件编码
+**答：** 请参考以下建议：
+1. **转换前备份**：在执行转换前，使用版本控制系统或手动备份源文件
+2. **原始编码检查**：确认源文件确实是 ANSI 编码，如果是其他编码（如 GBK），可能需要先转换到 ANSI
+3. **手动调整**：如果出现乱码，可以使用支持多种编码的编辑器（如 Notepad++）手动调整文件编码
+4. **恢复备份**：如果问题严重，从备份恢复原始文件并重新尝试转换
+
+**问：如何处理混合编码的文件？**
+
+**答：** 混合编码情况较为棘手，建议：
+1. 先识别每个文件的实际编码
+2. 使用支持多种编码的编辑器逐个调整
+3. 特别注意包含中文注释的文件
+4. 考虑使用 `iconv` 等专业工具进行精确转换
+
+---
+
+### 关于性能和优化
+**问：大项目编译速度慢怎么办？**
+
+**答：** 可以采取以下优化措施：
+1. 使用增量编译而非完全重新编译
+2. 考虑增加并行编译设置（在 Keil 项目中配置）
+3. 将不经常变动的文件预编译为库
+4. 优化项目的包含文件结构，减少冗余包含
+5. 使用 SSD 硬盘可显著提升编译速度
+
+**问：Zed 在大型项目中响应慢？**
+
+**答：** 可以尝试以下优化：
+1. 禁用不必要的 Zed 扩展
+2. 配置 `.gitignore` 排除不必要的文件
+3. 调整 clangd 配置限制内存使用
+4. 对于超大项目，考虑使用项目符号链接只包含必要文件
+
+---
+
+## 高级用法
+
+### 多项目配置
+如果你在多个项目中使用此工具集，可以：
+1. 将 `.zed` 文件夹放在一个公共位置
+2. 通过创建批处理或脚本来复制到新项目
+3. 或者将常用功能添加到系统路径中，以便从任何位置调用
+
+**示例：自动配置脚本**
+```batch
+@echo off
+REM setup_zed_keil.bat
+set /p project_path="输入项目路径: "
+xcopy "C:\path\to\reference\.zed" "%project_path%\.zed\" /E /Y
+echo Zed-Keil 集成已安装到 %project_path%
+pause
+```
+
+### 自定义任务
+你可以修改 `tasks.json` 文件来添加自定义任务：
+```json
+{
+  "label": "Keil: 自定义任务",
+  "command": "cmd.exe",
+  "args": ["/c", ".zed\\custom_script.bat", "your-parameters"],
+  "reveal": "always"
+}
+```
+
+**示例：调试模式编译**
+```json
+{
+  "label": "Keil: 编译调试版",
+  "command": "cmd.exe",
+  "args": ["/c", ".zed\\compile_debug.bat"],
+  "reveal": "always"
+}
+```
+对应 `compile_debug.bat` 内容：
+```batch
+@echo off
+call .zed\\keil_task.bat build "-DDEBUG -g"
+```
+
+### 集成其他工具
+此工具集可以与其他开发工具集成：
+
+**1. 版本控制**
+- 配合生成的 `.gitignore` 使用 Git 进行版本管理
+- 按需添加 Git 钩子进行自动格式化或代码检查
+
+**2. 自动化测试**
+可以在编译后添加测试脚本：
+```json
+{
+  "label": "Keil: 编译并测试",
+  "command": "cmd.exe",
+  "args": ["/c", ".zed\\build_and_test.bat"],
+  "reveal": "always"
+}
+```
+
+**3. 持续集成**
+可以将这些脚本集成到 CI/CD 流程中，例如 GitHub Actions：
+```yaml
+name: Build
+on: [push, pull_request]
+jobs:
+  build:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup Keil
+      run: |
+        # 安装 Keil 或使用预装版本
+        # 设置 KEIL_PATH 环境变量
+    - name: Build Project
+      run: .zed\\keil_task.bat build
+```
+
+### 针对特定芯片的优化
+
+针对不同微控制器系列，你可能需要特定的配置：
+
+**STM32 系列示例：**
+```yaml
+# .clangd
+CompileFlags:
+  Add: [
+    -DSTM32F103xB,
+    -DUSE_HAL_DRIVER,
+    -I"Drivers/STM32F1xx_HAL_Driver/Inc",
+    -I"Drivers/CMSIS/Device/ST/STM32F1xx/Include",
+    -I"Drivers/CMSIS/Include"
+  ]
+```
+
+**8051 系列示例：**
+```yaml
+# .clangd
+CompileFlags:
+  Add: [
+    -D__C51__,
+    -DMCU_8051,
+    -I"include/c51"
+  ]
+```
+
+### 团队协作最佳实践
+
+在团队环境中使用此工具集时，建议：
+
+1. **统一编码规范**：
+   - 约定使用 UTF-8 编码
+   - 在项目 README 中明确说明编码要求
+   - 考虑使用 pre-commit 钩子检查文件编码
+
+2. **共享配置模板**：
+   - 将 `.clangd` 和 `compile_commands.json` 模板包含在版本控制中
+   - 创建项目专用的配置文件模板
+   - 记录任何特殊配置的说明文档
+
+3. **版本控制规范**：
+   - 确保所有成员使用相同的 `.gitignore` 规则
+   - 约定分支命名和提交消息规范
+   - 定期同步主分支以避免冲突
+
+---
+
+## 故障排查指南
+
+### 问题诊断流程
+
+当遇到问题时，按照以下步骤进行诊断：
+
+1. **检查基础配置**
+   - 验证 Keil 路径设置是否正确
+   - 确认项目文件确实存在且可访问
+   - 检查 Zed 是否正确识别到项目
+
+2. **查看详细输出**
+   - 运行任务时注意观察控制台输出
+   - 检查生成的 `keil_build_log.txt` 文件
+   - 查找任何错误代码或异常信息
+
+3. **隔离问题**
+   - 尝试在 Keil 中直接执行相同操作
+   - 逐步减少项目复杂度以定位问题
+   - 测试简单项目以排除环境问题
+
+4. **查找特定解决方案**
+   - 参考本文档常见问题解答部分
+   - 搜索相关错误信息
+   - 在项目 GitHub 页面提交 Issue
+
+### 日志文件分析
+
+`keil_build_log.txt` 文件包含了完整的编译输出，关键信息包括：
+
+- **编译命令**：显示传递给 Keil 的完整命令行参数
+- **错误代码**：非零退出代码表示编译失败
+- **文件路径**：所有处理的文件完整路径
+- **编译统计**：编译时间和资源使用情况
+
+分析日志时，特别关注：
+```
+*** ERROR: ...          # 编译错误
+*** WARNING: ...        # 警告信息
+Total elapsed time: ...  # 编译耗时
+```
+
+### 常见错误代码
+
+| 错误代码 | 可能原因 | 解决方案 |
+|---------|---------|---------|
+| 1 | Keil 启动失败 | 检查 Keil 路径配置 |
+| 2 | 项目文件未找到 | 确认项目文件存在且格式正确 |
+| -1073741519 | Keil 执行异常 | 检查项目配置和依赖文件 |
+| 其他非零 | 编译错误 | 查看编译日志中的具体错误信息 |
+
+---
+
+## 资源与链接
+
+- **项目主页**: [GitHub - keil-task-in-zed](https://github.com/atopx/keil-task-in-zed)
+- **Zed 编辑器官网**: [zed.dev](https://zed.dev/)
+- **clangd 文档**: [clangd.llvm.org](https://clangd.llvm.org/)
+- **Keil MDK 官方文档**: [developer.arm.com](https://developer.arm.com/tools-and-software/embedded/keil-mdk)
+- **Arm 编译器参考指南**: [developer.arm.com](https://developer.arm.com/documentation/dui0473/latest/)
